--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -22,7 +22,7 @@
         <hr/> 
         <h4 style="padding-bottom:0px"> Read More: </h4>
         <h1>
-            {{with .NextInSection}}
+            {{with .PrevInSection}}
             <a class="blue" href="{{.Permalink}}">{{.Title}}</a>
             {{end}}
         </h1>
