--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,9 @@
 <head>
     <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title | default "" }}" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono">
-    <link rel="stylesheet" href="/css/custom.css">
-    <script async data-uid="9d2fbc53bb" src="https://ttunguz.ck.page/9d2fbc53bb/index.js"></script>
+   <script async data-uid="9d2fbc53bb" src="https://ttunguz.ck.page/9d2fbc53bb/index.js"></script>
+   <meta name="viewport" content="width=device-width">
 </head>
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap">
+<link rel="stylesheet" href="/css/custom.css">
+ 
 
