--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,6 +6,7 @@ body {
     font-weight:500; 
     font-size:18px; 
     line-height:27px; 
+
 }
 
 h1 { 
@@ -156,3 +157,12 @@ h3 .links{
 li {
     padding-top: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+      font-size:22px;
+      line-height:27px;
+  }
+}
+
+
