--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 {{ partial "navigation.html" . }}
 
-<body width="700 px;">
+<body width="">
     <div class="post-body" style="">
 
         <p class="reading-time">{{.ReadingTime}} minute read / {{.Date.Format "Jan 2, 2006" }} /
