--- a/layouts/page/simple-static.html
+++ b/layouts/page/simple-static.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 {{ partial "navigation.html" . }}
 
-<body width="700 px;">
+<body width="">
     <div class="post-body" style="">
 
         <h1>{{.Title}} </h1>
