--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,4 +1,4 @@
-<div class = "fixed" style="background:white; width:700px">
+<div class = "fixed" style="background:white; width:100%">
 
     <img style="float:right; border-radius:50%; height:75px; width:75px" src="/img/tomasz_profile.jpeg"/>
     <div class="navigation" style="">
