--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -5,7 +5,7 @@
         <a href="/" style="text-decoration:none; color:black">Tomasz Tunguz</a>
     </div>
     <p class="navigation_subheader"> 
-    Venture Capitalist
+    Venture Capitalist at Redpoint
     </p>
     <p class="links block font12" style="color:gray">
     <a class="nounderline" href="/about">About</a> /
