--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -160,6 +160,10 @@ li {
     padding-top: 5px;
 }
 
+blockquote { 
+    font-style: italic;
+}
+
 @media only screen and (max-width: 600px) {
   body {
       font-size:22px;
