--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -28,6 +28,11 @@ h4 {
     font-family: "Roboto Mono";
 }
 
+h5 {
+    padding-top: 20px;
+    font-size: 18px;
+}
+
 .content { 
     color: rgb(92, 110, 116);
 }
@@ -43,13 +48,15 @@ a {
 
 img {
     width: 700px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 table {
     width: 100%;
     font-family: 'Roboto';
+    padding-top: 10px;
+    padding-bottom: 35px;
     font-weight:300; 
     font-size: 18px;
     color: rgb(92, 110, 116);
