move to Noto sans for title font

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,7 @@
     </script>
 
 </head>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap" onload="this.media='all'">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Noto+Sans+Mono&display=swap" onload="this.media='all'">
 <link rel="stylesheet" href="/css/custom.css">
  
 
