--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -9,6 +9,7 @@
     </p>
     <p class="links block font12" style="color:gray">
     <a class="nounderline" href="/about">About</a> /
+    <a class="nounderline" href="/office-hours-videos">Office Hours</a> /
     <a href="/categories" class="nounderline"> Categories</a> /
         <a href="https://ttunguz.ck.page/b71fd9a3dd" class="nounderline">Subscribe</a> / 
         <a class="nounderline" href="https://twitter.com/ttunguz">Twitter</a>
